force-app/main/default/objects/Lead/fields/ContactReason__c.field-meta.xml
<CustomField>
    <fullName>ContactReason__c</fullName>
    <label>Motivo do Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negócios</fullName>
            </value>
            <value>
                <fullName>Informações sobre a AG</fullName>
            </value>
            <value>
                <fullName>Informações de Marketing</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>