force-app/main/default/objects/Lead/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <description>Campo para identificar o motivo da perda/não conversão de um lead</description>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não interessado</fullName>
            </value>
            <value>
                <fullName>Preços</fullName>
            </value>
            <value>
                <fullName>Carteira de Produtos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>