force-app/main/default/objects/Lead/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Descrição de outra justificativa do contato com o lead</description>
    <label>Outros</label>
    <length>80</length>
    <type>Text</type>
</CustomField>