force-app/main/default/objects/Lead/validationRules/Valida_CPF.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_CPF</fullName>
    <active>true</active>
    <description>Valida o formato do CPF</description>
    <errorConditionFormula>NOT(
OR(
ISBLANK(CPF__c),
REGEX( CPF__c , &quot;[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}&quot;)
)
)</errorConditionFormula>
    <errorMessage>O CPF deve ter o seguinte formato: XXX.XXX.XXX-XX</errorMessage>
</ValidationRule>